fixed text-align for homepage-teaser

--- a/source-bundle/scss/molecules/block/homepage-dosierteaser.scss
+++ b/source-bundle/scss/molecules/block/homepage-dosierteaser.scss
@@ -12,7 +12,7 @@
     }
     .teaser.teaser--poster {
         .heading {
-            text-align:         center;
+            //text-align:         center;
             width:              100%;
         }
         @include media-query($breakpoint_medium) {
